# studioflow

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  README.md
.github/workflows/: pages.yml
animation/: index.html  script.js
animation/control_room/: Inspector.jsx  PipelineSummary.jsx  ui.jsx
docs/: apple-narrative.md  architecture.md  build-plan.md  day-1-checklist.md  demo-script.md  devpost.md
docs/demo/: App.jsx  IncidentCard.jsx  index.html
frontend/: README.md  SKILL.md
frontend/assets/: ICONS-SUBSTITUTION.md
frontend/fonts/: README.md
frontend/preview/: _card.css  brand-icons.html  brand-logo.html  colors-accent.html  colors-foreground.html  colors-status.html  colors-surfaces.html  components-approval-gate.html  components-asset-row.html  components-buttons.html  components-fields.html  components-glass-panel.html  components-incident-card.html  components-inputs.html  components-pills.html  components-pipeline-graph.html  components-pipeline-tiles.html  components-sidebar.html  components-status-pills.html  components-tool-calls.html  components-tool-stream.html  spacing-elevation.html  spacing-radii.html  spacing-scale.html  type-body.html  type-display.html  type-mono.html
pages/: colors_and_type.css  index.html
pages/control_room/: ApprovalGate.jsx  README.md  Sidebar.jsx  Toast.jsx  ToolStream.jsx  (+2 more)
scripts/: chaos.sh  deploy.sh  verify-trace.py
services/agent/: Dockerfile  agent.py  approval_gate.py  cloudbuild.yaml  pyproject.toml  remediation.py  requirements.txt  run.py  server.py
services/agent/prompts/: system.md
(+24 files in other folders)
