[project]
name = "studioflow-agent"
version = "0.1.0"
description = "ADK agent that diagnoses StudioFlow pipeline incidents using Dynatrace MCP."
requires-python = ">=3.12"
dependencies = [
  "google-adk>=1.10.0",
  "mcp>=1.0.0",
  "python-dotenv>=1.0.0",
  "google-cloud-firestore>=2.16.0",
]

[tool.uv]
package = false
